#2; Implement TypeScript & Angular2.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,14 +29,42 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+
+    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
+    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+
+    <script>
+    System.config({
+              map: {
+                  rxjs: 'node_modules/rxjs' // added this map section
+              },
+              packages: {
+                  app: {
+                      format: 'register',
+                      defaultExtension: 'js'
+                  },
+                  'rxjs': {defaultExtension: 'js'} // and added this to packages
+              }
+          });
+    System.import('/app/main')
+                  .then(null, console.error.bind(console));
+    </script>
+
+
   </head>
 
   <body>
     <%- body %>
 
 
-
+    <my-app>Loading ...</my-app>
     <!--
         Client-side Templates
         ========================
@@ -59,6 +87,7 @@
     -->
 
     <!--TEMPLATES-->
+    
     <!--TEMPLATES END-->
 
 
@@ -86,6 +115,7 @@
     -->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
