--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -15,12 +15,24 @@ coverslider {
     text-align: center;
     width: 50px;
     z-index: 100;
+    @media only screen and (max-width: 700px) {
+      height: 25px;
+      font-size: 18px;
+      line-height: 25px;
+      width: 25px;
+    }
   }
   .coverslider__nav--left {
     left: 50px;
+    @media only screen and (max-width: 700px) {
+      left: 25px;
+    }
   }
   .coverslider__nav--right {
     right: 50px;
+    @media only screen and (max-width: 700px) {
+      right: 25px;
+    }
   }
 }
 .coverpage {
