#3; Implement responsive styles.

--- a/views/layouts/base.pug
+++ b/views/layouts/base.pug
@@ -55,7 +55,7 @@ html
       .ui.container
         a.header.item Coalesce
         a.item Get Involved
-        .item.right.ct__mobilemenu__button__wrap.js-sidebar-toggle
+        .item.right.mobile.tablet.only.ct__mobilemenu__button__wrap.js-sidebar-toggle
           .ct__mobilemenu__button
             span.top
             span
