#3; Landing page updates.

--- a/assets/styles/components/ng/coverslider.less
+++ b/assets/styles/components/ng/coverslider.less
@@ -38,7 +38,7 @@ coverslider {
 .coverpage {
   // display: flex;
   // height: 100vh;
-  background-image: url(/images/landingpage-sustainableagriculture.jpg);
+  // background-image: url(/images/landingpage-sustainableagriculture.jpg);
   background-position: center center;
   background-size: cover;
   padding-top: 40px;
@@ -65,6 +65,10 @@ coverslider {
     letter-spacing: -4px;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
     text-transform: uppercase;
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
   }
   h3 {
     color: #fff;
