--- a/assets/styles/components/ng/coverslider.less
+++ b/assets/styles/components/ng/coverslider.less
@@ -69,6 +69,18 @@ coverslider {
       color: #fff;
       text-decoration: none;
     }
+    @media only screen and (max-width: 900px) {
+      font-size: 48px;
+    }
+    @media only screen and (max-width: 600px) {
+      font-size: 32px;
+      letter-spacing: -2px;
+      margin: 0 auto;
+      max-width: 75%;
+    }
+    @media only screen and (max-width: 400px) {
+      font-size: 24px;
+    }
   }
   h3 {
     color: #fff;
@@ -77,5 +89,21 @@ coverslider {
     font-weight: 600;
     letter-spacing: -2px;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+    @media only screen and (max-width: 900px) {
+      font-size: 32px;
+    }
+    @media only screen and (max-width: 600px) {
+      font-size: 24px;
+      letter-spacing: -1px;
+      margin: 0 auto;
+      max-width: 75%;
+    }
+    @media only screen and (max-width: 400px) {
+      font-size: 18px;
+    }
   }
 }
