#6; Fix nav link.

--- a/views/layouts/base.pug
+++ b/views/layouts/base.pug
@@ -65,7 +65,7 @@ html
           .ct__mobilemenu__button
             span.top
             span
-        a.header.item Coalesce
+        a.header.item(href='/') Coalesce
         a.item.tablet.or.lower.hidden Get Involved
         if req.session.authenticated
           .ui.simple.dropdown.item.right.tablet.or.lower.hidden
