--- a/views/layouts/base.pug
+++ b/views/layouts/base.pug
@@ -78,9 +78,10 @@ html
           a.item.blue.active.right.tablet.or.lower.hidden(href='/auth/login?type=facebook') Connect
           a.item.blue.active.mobile.tablet.only(href='/auth/login?type=facebook') Connect
     sidebar.ui.sidebar.inverted.vertical.menu.ct__sidebar.js-sidebar
-      a.item(href='/user/' + req.session.user.id) View Profile
-      a.item Change Settings
+      a.item Get Involved
       if req.session.authenticated
+        a.item(href='/user/' + req.session.user.id) View Profile
+        a.item Change Settings
         a.item(href='/auth/logout') Log Out
     .pusher
       block body-content
