style(general): Update "Cover Slider" navigations with transparency.

--- a/assets/styles/components/ng/coverslider.less
+++ b/assets/styles/components/ng/coverslider.less
@@ -3,7 +3,7 @@ coverslider {
   height: 100vh;
   position: relative;
   .coverslider__nav {
-    background-color: #333;
+    background-color: rgba(27, 28, 29, 0.8);
     border-radius: 50%;
     color: #fff;
     cursor: pointer;
