feat(Cause): Implement Cause and Organization models/controllers. #8

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -61,6 +61,49 @@
   }
 }
 
+.ct__causes {
+  header {
+    background: #ffa84c; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffa84c 0%, #ff7b0d 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffa84c 0%,#ff7b0d 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffa84c 0%,#ff7b0d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 ); /* IE6-9 */
+    display: flex;
+    height: 25vh;
+    overflow: hidden;
+    position: relative;
+    .shadow {
+      bottom: 0;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
+      left: -20px;
+      position: absolute;
+      right: -20px;
+      top: 0;
+    }
+  }
+}
+
+.ct__organization {
+  header {
+    background: #ffa84c; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffa84c 0%, #ff7b0d 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffa84c 0%,#ff7b0d 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffa84c 0%,#ff7b0d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 ); /* IE6-9 */
+    display: flex;
+    height: 25vh;
+    overflow: hidden;
+    position: relative;
+    .shadow {
+      bottom: 0;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
+      left: -20px;
+      position: absolute;
+      right: -20px;
+      top: 0;
+    }
+  }
+}
 
 .ct__userprofile {
   header {
