--- a/views/layouts/base.pug
+++ b/views/layouts/base.pug
@@ -93,3 +93,4 @@ html
         button.toggleClass('active');
         $('.js-sidebar').sidebar('toggle');
       });
+      $('[data-content]').popup();
