--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -1,4 +1,5 @@
 @import 'components/fonts.less';
+@import 'components/helpers.less';
 @import 'components/responsive.less';
 @import 'components/table.less';
 @import 'components/ng/coverslider.less';
@@ -69,7 +70,8 @@
     background: linear-gradient(to bottom, #ffa84c 0%,#ff7b0d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 ); /* IE6-9 */
     display: flex;
-    height: 25vh;
+    height: 190px;
+    margin-bottom: 40px;
     overflow: hidden;
     position: relative;
     .shadow {
@@ -79,6 +81,36 @@
       position: absolute;
       right: -20px;
       top: 0;
+    }
+    .table {
+      height: 150px;
+      margin-top: 40px;
+    }
+    h1 {
+      color: #fff;
+      font-family: 'WF Segoe UI';
+      font-size: 64px;
+      font-weight: 600;
+      letter-spacing: -4px;
+      text-align: center;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+      text-transform: uppercase;
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+      @media only screen and (max-width: 900px) {
+        font-size: 48px;
+      }
+      @media only screen and (max-width: 600px) {
+        font-size: 32px;
+        letter-spacing: -2px;
+        margin: 0 auto;
+        max-width: 60%;
+      }
+      @media only screen and (max-width: 400px) {
+        font-size: 24px;
+      }
     }
   }
 }
